test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/12.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:c58932025404f00eb5e9c9401e493013e8c9d0c7ac137bd3ecc1bc8987138f8d
size 4560251
